@@ -1,3 +1,13 @@
+2007-10-14  Jens Granseuer  <jensgr@gmx.net>
+
+	When updating theme info from GConf or copying it for customization, we
+	were ignoring xcursor settings. As a result, saved custom themes always
+	had the default theme set. (bug #485709)
+
+	* appearance-themes.c: (get_default_int_from_key),
+	(theme_load_from_gconf), (theme_set_custom_from_theme): when setting up
+	theme info, take cursor settings into account
+
 2007-10-09  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
